# github_app_pr_review

./: .gitignore  Cargo.toml  README.md
assets/: parsed_payload.json  payload.json
github_pr_review/: Cargo.toml
github_pr_review/.cargo/: config.toml
github_pr_review/src/: lib.rs
src/: lib.rs  parse_hook.rs
tester_hook/: Cargo.toml
tester_hook/src/: lib.rs
