[package]
name = "github_app_pr_review"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }

[dependencies]
dotenv = "0.15.0"
github-flows = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1"
flowsnet-platform-sdk = "0.1"
lazy_static = "1.4.0"
regex = "1.7.1"
llmservice-flows = "0.3.0"
words-count = "0.1.4"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
webhook-flows = "0.4.4"
