[package]
name = "github_pr_review"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github_app_pr_review = {path = "../"}
flowsnet-platform-sdk = "0.1.6"
webhook-flows = "0.4.4"
log = "0.4.22"
serde_json = "1.0.97"
serde = {version = "1", features = ["derive"]}
anyhow = "1.0.89"
dotenv = "0.15.0"
 tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
lazy_static = "1.4.0"
regex = "1.7.1"
llmservice-flows = "0.3.0"
words-count = "0.1.4"
