[package]
name = "tester_hook"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github_app_pr_review = {path = "../"}
# dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1"
flowsnet-platform-sdk = "0.1"
lazy_static = "1.4.0"
regex = "1.7.1"
llmservice-flows = "0.3.0"
words-count = "0.1.4"
log = "0.4"
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
webhook-flows = "0.4.4"
dotenv = "0.15.0"
